# Expedia_Dep

./: .gitattributes  .gitignore  CHANGELOG.md  EXPEDIA_Design_Specification_EDS_v2.0.docx  EXPEDIA_Design_Specification_EDS_v2.1.1.docx  EXPEDIA_Design_Specification_EDS_v2.1.docx  EXPEDIA_Requirements_Specification_ERS_v1.0.docx  PROJECT_CONTEXT.md  README.md  pyproject.toml
.github/workflows/: README.md
api/: README.md
api/config/: service.example.yaml
atlas-builder/: README.md
atlas-builder/config/: build-manifest.example.yaml
benchmarks/: README.md
benchmarks/data-manifests/: M3-001-M1-V3-DRAFT-QUERY-CORPUS.md  M3-002-M1-V3-EXACT-COSINE-CORPUS.md  README.md
benchmarks/evaluation-manifests/: M3-002-EVALUATION-MANIFEST-TEMPLATE.json  README.md  m3-001-v1-evaluation-manifest.json  m3-001-v1.1-evaluation-manifest.json  m3-002-v1-evaluation-manifest.json
benchmarks/execution/: README.md  m3_001_runner.py  m3_002_runner.py
benchmarks/preregistrations/: M3-002-CLAIM-BOUNDARY-VERIFICATION.md  M3-CLAIM-BOUNDARY-REGISTER.md  M3-PREREGISTRATION-TEMPLATE.md  README.md  m3-001-deterministic-exact-query-reproducibility.md  m3-001-v1.0-execution-environment-amendment.md  m3-002-exact-float32-cosine-correctness.md
docs/: KNOWN_LIMITATIONS.md  LESSONS_LEARNED.md  README.md
docs/implementation/: M2.2-VERIFIED-RELEASE-ADAPTER.md  (+4 more)
explorer/: README.md
fixtures/: README.md
profiles/: README.md
query-core/: README.md
schemas/: README.md
sdk/: README.md
specification/: README.md
storage/: README.md
tests/: README.md
validation/: README.md
(+199 files in other folders)
