[project]
name = "expedia-contract-conformance"
version = "0.0.0"
description = "Test-only JSON Schema conformance environment for EXPEDIA contracts."
requires-python = ">=3.11,<3.13"

[dependency-groups]
test = [
  "jsonschema[format]==4.23.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
